hotfix for chat rendering order on mobile critical, fix typing indicator absolutely any layout effect

--- a/src/react/Chat.css
+++ b/src/react/Chat.css
@@ -1,5 +1,5 @@
 div.chat-wrapper {
-  z-index: -2;
+  z-index: -1;
   /* increase specificity */
   position: fixed;
   /* z-index: 10; */
